{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 123,
  "lineage": "bd6ac38e-f638-d013-0a3c-bbddd96efa1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e4c8bcf1a61a877",
            "association_id": "eipassoc-0d4095335b06ad168",
            "domain": "vpc",
            "id": "eipalloc-01e4c8bcf1a61a877",
            "network_border_group": "us-east-1",
            "network_interface": "eni-034ddf4a76734cd1a",
            "private_dns": "ip-10-0-0-163.ec2.internal",
            "private_ip": "10.0.0.163",
            "public_dns": "ec2-34-192-224-65.compute-1.amazonaws.com",
            "public_ip": "34.192.224.65",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "terraform-testing"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:internet-gateway/igw-09f60fb5b13a58cb6",
            "id": "igw-09f60fb5b13a58cb6",
            "owner_id": "676235899228",
            "tags": {
              "Name": "terraform-testing-IGW}"
            },
            "tags_all": {
              "Name": "terraform-testing-IGW}",
              "env": "terraform-testing"
            },
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e4c8bcf1a61a877",
            "connectivity_type": "public",
            "id": "nat-0e0d1bab80514ff72",
            "network_interface_id": "eni-034ddf4a76734cd1a",
            "private_ip": "10.0.0.163",
            "public_ip": "34.192.224.65",
            "subnet_id": "subnet-06acae721610909be",
            "tags": {
              "Name": "terraform-testing-nat"
            },
            "tags_all": {
              "Name": "terraform-testing-nat",
              "env": "terraform-testing"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a3ac1ecbdc3dbec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e0d1bab80514ff72",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a3ac1ecbdc3dbec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09f60fb5b13a58cb6",
            "id": "r-rtb-022d9f8dfcadd99761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022d9f8dfcadd9976",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:route-table/rtb-07a3ac1ecbdc3dbec",
            "id": "rtb-07a3ac1ecbdc3dbec",
            "owner_id": "676235899228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0d1bab80514ff72",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-testing-private-rt"
            },
            "tags_all": {
              "Name": "terraform-testing-private-rt",
              "env": "terraform-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:route-table/rtb-022d9f8dfcadd9976",
            "id": "rtb-022d9f8dfcadd9976",
            "owner_id": "676235899228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f60fb5b13a58cb6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-testing-public-rt"
            },
            "tags_all": {
              "Name": "terraform-testing-public-rt",
              "env": "terraform-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2bb38d8a83cfbfd",
            "route_table_id": "rtb-07a3ac1ecbdc3dbec",
            "subnet_id": "subnet-0191886a6dbd6fb30"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec6ca88ba914d60",
            "route_table_id": "rtb-07a3ac1ecbdc3dbec",
            "subnet_id": "subnet-0eb87bce13bc85cca"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa34c0abe5439036",
            "route_table_id": "rtb-022d9f8dfcadd9976",
            "subnet_id": "subnet-06acae721610909be"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea4c3947c779481e",
            "route_table_id": "rtb-022d9f8dfcadd9976",
            "subnet_id": "subnet-0da0aa7bef4ae9a1d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:security-group/sg-02075343ea2b838e6",
            "description": "security group for the client application load balancer",
            "egress": [],
            "id": "sg-02075343ea2b838e6",
            "ingress": [],
            "name": "terraform-testing-SG20220510124611663100000001",
            "name_prefix": "terraform-testing-SG",
            "owner_id": "676235899228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-testing-SG"
            },
            "tags_all": {
              "Name": "terraform-testing-SG",
              "env": "terraform-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgrule-2469417687",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02075343ea2b838e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic",
            "from_port": 0,
            "id": "sgrule-853622158",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02075343ea2b838e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:subnet/subnet-0191886a6dbd6fb30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0191886a6dbd6fb30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676235899228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-testing-private-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-testing-private-us-east-1a",
              "env": "terraform-testing"
            },
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:subnet/subnet-0eb87bce13bc85cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb87bce13bc85cca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676235899228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-testing-private-us-east-1b"
            },
            "tags_all": {
              "Name": "terraform-testing-private-us-east-1b",
              "env": "terraform-testing"
            },
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:subnet/subnet-06acae721610909be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06acae721610909be",
            "ipv6_cidr_block": "2600:1f18:26b9:6200::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b58773a5da09684c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676235899228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-testing-public-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-testing-public-us-east-1a",
              "env": "terraform-testing"
            },
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:subnet/subnet-0da0aa7bef4ae9a1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da0aa7bef4ae9a1d",
            "ipv6_cidr_block": "2600:1f18:26b9:6201::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a0f079de12d78976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676235899228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-testing-public-us-east-1b"
            },
            "tags_all": {
              "Name": "terraform-testing-public-us-east-1b",
              "env": "terraform-testing"
            },
            "vpc_id": "vpc-0272c290df065f0bd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676235899228:vpc/vpc-0272c290df065f0bd",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c7da2ab7be98a22",
            "default_route_table_id": "rtb-0193dcfcf064ee1da",
            "default_security_group_id": "sg-0fc8ce348779e7d7e",
            "dhcp_options_id": "dopt-59c03523",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0272c290df065f0bd",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0824b37ba85393cdb",
            "ipv6_cidr_block": "2600:1f18:26b9:6200::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0193dcfcf064ee1da",
            "owner_id": "676235899228",
            "tags": {
              "Name": "terraform-testing-VPC"
            },
            "tags_all": {
              "Name": "terraform-testing-VPC",
              "env": "terraform-testing"
            }
          }
        }
      ]
    }
  ]
}